[gd_scene load_steps=19 format=3 uid="uid://baprq14svtfj4"]

[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_f0bd8"]
[ext_resource type="Texture2D" uid="uid://4yq8hw4oq8y" path="res://Entities/Player/player.png" id="1_gx1qv"]
[ext_resource type="Script" path="res://Entities/Player/ui.gd" id="3_hu0ih"]
[ext_resource type="FontFile" uid="uid://d2xk6epfeb0ag" path="res://Global/m3x6.ttf" id="5_gncjw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3tcl"]
size = Vector2(3, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_83s6u"]
atlas = ExtResource("1_gx1qv")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvfc2"]
atlas = ExtResource("1_gx1qv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gokx"]
atlas = ExtResource("1_gx1qv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc2p0"]
atlas = ExtResource("1_gx1qv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbvop"]
atlas = ExtResource("1_gx1qv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdu83"]
atlas = ExtResource("1_gx1qv")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdjnm"]
atlas = ExtResource("1_gx1qv")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kjw3"]
atlas = ExtResource("1_gx1qv")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4h7e"]
atlas = ExtResource("1_gx1qv")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1mew"]
atlas = ExtResource("1_gx1qv")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_drppk"]
atlas = ExtResource("1_gx1qv")
region = Rect2(160, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vigw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83s6u")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvfc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gokx")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc2p0")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbvop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdu83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdjnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kjw3")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4h7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1mew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drppk")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnesx"]
size = Vector2(6, 8)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_f0bd8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_c3tcl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_2vigw")
animation = &"idle"
autoplay = "idle"

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.27

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 260

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_cnesx")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_hu0ih")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="HeartContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CoinContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Count" type="Label" parent="UI/MarginContainer/VBoxContainer/CoinContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("5_gncjw")
theme_override_font_sizes/font_size = 11
text = "0"

[connection signal="update_coins" from="." to="UI" method="_on_player_update_coins"]
[connection signal="update_health" from="." to="UI" method="_on_player_update_health"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
